# currency-daily

./: .gitignore  Makefile  README.md  assets.py  pyproject.toml
src/: __init__.py  assets.py  resources.py
